--- a/khushi/form/flower_1.html
+++ b/khushi/form/flower_1.html
@@ -103,9 +103,21 @@
     <label><input type="checkbox"> purple</label>
     <label><input type="checkbox"> Red</label>
      <label><input type="checkbox"> Yellow</label>
+  </div>
+</div>
 
-
-
+<div class="dropdown">
+  <button class="button_9">Flower Types &#x25BC;</button>
+  <div class="dropdown-content">
+    <label><input type="checkbox">Rose</label>
+    <label><input type="checkbox">Lily</label>
+    <label><input type="checkbox"> Sunflower</label>
+    <label><input type="checkbox"> Carnation</label>
+     <label><input type="checkbox"> Daisy</label>
+      <label><input type="checkbox">  Snapdragon</label>
+       <label><input type="checkbox"> Hydrangea</label>
+        <label><input type="checkbox"> Alstroemeria</label>
+    
   </div>
 </div>
 
