--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -8,6 +8,8 @@
 <body>
 <div class="parent">
   <div class="child1"></div>
+  <div class="child2"></div>
+  <div class="child3"></div>
 </div>
 </body>
 </html>
