--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -4,13 +4,185 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #121212;
+  color: #f5f5f5;
+}
+
+/* Header */
+header {
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #1c1c1c;
+  border-bottom: 2px solid #ff6600;
+}
+
+header h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+  color: #ff6600;
+}
+
+header p {
+  font-size: 18px;
+  color: #ccc;
+}
+
+/* Categories Section */
+.categories {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px 20px;
+  gap: 20px;
+}
+
+.category-card {
+  background: #2a2a2a;
+  padding: 30px;
+  width: 200px;
+  border-radius: 10px;
+  text-align: center;
+  transition: background 0.3s ease;
+  border: 1px solid #333;
+}
+
+.category-card:hover {
+  background-color: #3c3c3c;
+}
+
+.category-card h2 {
+  color: #ff6600;
+  margin-bottom: 10px;
+}
+
+.category-card p {
+  color: #bbb;
+}
+
+/* Products Section */
+.products {
+  padding: 40px 20px;
+  background-color: #181818;
+}
+
+.section-title {
+  text-align: center;
+  color: #ff6600;
+  margin-bottom: 30px;
+  font-size: 28px;
+}
+
+.product-grid {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 25px;
+}
+
+.product-card {
+  background: #222;
+  padding: 20px;
+  width: 200px;
+  border-radius: 10px;
+  text-align: center;
+  border: 1px solid #333;
+}
+
+.product-card img {
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+
+.product-card h3 {
+  color: #fff;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.product-card p {
+  color: #ff6600;
+  font-size: 16px;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #1c1c1c;
+  color: #888;
+  font-size: 14px;
+  border-top: 2px solid #ff6600;
+}
+  </style>
 </head>
 <body>
-<div class="parent">
-  <div class="child1"></div>
-  <div class="child2"></div>
-  <div class="child3"></div>
-  <div class="child4"></div>
-</div>
+
+<!-- Header -->
+  <header>
+    <h1>Nashta Bazaar</h1>
+    <p>Your Premium Selection of Whisky, Wine & More 🍷</p>
+  </header>
+
+  <!-- Categories -->
+  <section class="categories">
+    <div class="category-card">
+      <h2>Whisky</h2>
+      <p>Aged & bold flavors</p>
+    </div>
+    <div class="category-card">
+      <h2>Wine</h2>
+      <p>Classy and smooth</p>
+    </div>
+    <div class="category-card">
+      <h2>Cigarettes</h2>
+      <p>Top quality brands</p>
+    </div>
+    <div class="category-card">
+      <h2>Beer</h2>
+      <p>Cool and refreshing</p>
+    </div>
+  </section>
+
+  <!-- Product Listing -->
+  <section class="products">
+    <h2 class="section-title">Featured Products</h2>
+    <div class="product-grid">
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200x200?text=Whisky" alt="Whisky">
+        <h3>Royal Stag Whisky</h3>
+        <p>₹850</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200x200?text=Wine" alt="Wine">
+        <h3>Sula Red Wine</h3>
+        <p>₹1,200</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200x200?text=Cigarettes" alt="Cigarettes">
+        <h3>Marlboro Gold</h3>
+        <p>₹350</p>
+      </div>
+
+      <div class="product-card">
+        <img src="https://via.placeholder.com/200x200?text=Beer" alt="Beer">
+        <h3>Kingfisher Premium</h3>
+        <p>₹180</p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Nashta Bazaar | 18+ Only | All rights reserved.</p>
+  </footer>
 </body>
 </html>
