--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -183,6 +183,8 @@ footer {
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Nashta Bazaar | 18+ Only | All rights reserved.</p>
+    <div class="parenta">name:</div>
+    <div class="parents1">age</div>
   </footer>
 </body>
 </html>
