--- a/khushi/form/Flex.html
+++ b/khushi/form/Flex.html
@@ -183,6 +183,8 @@ footer {
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Nashta Bazaar | 18+ Only | All rights reserved.</p>
+    <div class="parents">her name:yadav khushi</div>
+    
   
   </footer>
 </body>
