--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <pre>
     <p>
     <h1><MARK>STUDENT INFORMATION</MARK></h1>
-    <OL>
+    <ol>
         <li> student_name</li>
         <li>student_id</li>
         <li>student_phoneno</li>
         <li>student_rollno</li>
-    </OL>
+    </ol>
     <q>
         <p aling="rihgt">
         a person who helps student to acquire knowlodge<br>
         competeence or virtue the precticle of teaching
+        <br>a parson is kind and very sweet never tel him to work hard in home our
         </p>
     </q>
     <var>
@@ -27,10 +28,8 @@
         (a+b+c)
         a=d*g+h
     </var>
-    <img src=
-
-    
-    </p>
+    <img src="../0868_PF_Summer25-Site_MemorialDay_SidebySide_Image_v2_Mobile.webp" class="img_of_coffee" width="200px" height="200px" border="1px solid black" , >
+</p>
     </pre>
 
 </body>
