--- a/.vscode/HTML/button.html
+++ b/.vscode/HTML/button.html
@@ -12,12 +12,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            height: 700px;
             gap: 20px;
             flex-direction: column;
-            padding: 20px;
-            border: 2px solid red;
-            height: 300px;
-            width: 400px;
+            padding: 10px 30px;
+            border: 4px dashed red;
+            width: 500px;
         }
 
         .infos {
@@ -27,6 +27,21 @@
             align-items: center;
             gap: 10px;
         }
+
+        .card_div > img{
+            width: 100px;
+            height: 100px;
+        }
+      .text_div{
+        font-size: 18px;
+        display: flex !important;
+        overflow-y: scroll;
+        height: 150px;
+        scrollbar-width: none;
+      }
+      .title_div{
+        font-size: 20px;
+      }
     </style>
 </head>
 
