--- a/wibside/project_hospital/button.html
+++ b/wibside/project_hospital/button.html
@@ -123,7 +123,7 @@
 
 </body>
 </html-->
-<!DOCTYPE html>
+<!--DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -255,4 +255,4 @@
   </script>
 
 </body>
-</html>
+</html-->
