--- a/.vscode/HTML/apifetch3.html
+++ b/.vscode/HTML/apifetch3.html
@@ -36,7 +36,15 @@
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
         }
-
+     p{
+      text-align: center;
+      font-weight: bolder;
+      font-size: 18px;
+      padding: 7px 0px;
+     }
+     h2,h1{
+      text-align: center;
+     }
     
     </style>
 
