--- a/.vscode/HTML/apifetch3.html
+++ b/.vscode/HTML/apifetch3.html
@@ -49,8 +49,8 @@
     </style>
 
    </head>
-   <body onload="ApiCall()">
-    <h1>Cat Api Call</h1>
+   <body onload="dataLoad()">
+       <input onkeydown="dataInput(event)" type="text" id="searchInput">
     <div id="info"></div>
 
    </body>
