--- a/wibside/hover/hover.html
+++ b/wibside/hover/hover.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -124,6 +124,31 @@
   </script>
 
 </body>
-</html>
+</html--->
 
-<div class="parents">child1</div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <script>
+    function name(){
+
+      const a=document.getElementById('k').value;
+      if(age>=25){
+        document.write('your eligible');
+      }
+       else{
+        document.write('sorry,your not eligible')
+       }
+    }
+  </script>
+</head>
+<body>
+  age:
+  <input type="number" placeholder="enter the number" id="k">
+  <button onclick="name()">button</button>
+</body>
+</html>
