--- a/.vscode/HTML/scrollarrow.html
+++ b/.vscode/HTML/scrollarrow.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -46,6 +46,27 @@ section {
   background: #22a6b3;
 }
 
+.section5 {
+  background:rgb(232, 32, 99);
+}
+
+.section6 {
+  background:yellow;
+}
+
+.section7 {
+  background:red;
+}
+.section8 {
+  background:rgb(106, 103, 103);
+}
+
+.section9 {
+  background:rgb(208, 57, 107);
+}
+.section10 {
+  background:purple;
+}
 .to-top {
   background: white;
   position: fixed;
@@ -70,6 +91,27 @@ section {
   pointer-events: auto;
   opacity:1;
 }
+.to-top::after {
+      content: "Back to Top";
+      position: absolute;
+      bottom: 60px;
+      right: -8px;
+      background: #333;
+      color: #fff;
+      padding: 4px 8px;
+      font-size: 12px;
+      border-radius: 4px;
+      opacity: 0;
+      transform: translateY(5px);
+      transition: all 0.3s ease;
+      white-space: nowrap;
+    }
+
+    .to-top:hover::after {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  
   </style>
 </head>
 
@@ -79,6 +121,12 @@ section {
   <section class="section2">Section 2</section>
   <section class="section3">Section 3</section>
   <section class="section4">Section 4</section>
+   <section class="section5">Section 5</section>
+    <section class="section6">Section 6</section>
+     <section class="section7">Section 7</section>
+     <section class="section8">Section 8</section>
+      <section class="section9">Section 9</section>
+      <section class="section10">Section 10</section>
 
   <a href="#" class="to-top">
     <i class="fas fa-chevron-up"></i>
@@ -87,14 +135,14 @@ section {
   <script>
     const toTop = document.querySelector(".to-top");
 
-   d.window.addEventListener("scroll", () => {
+   window.addEventListener("scroll", () => {
   if (window.pageYOffset > 100) 
   {
     toTop.classList.add("active");
   } else 
   {
     toTop.classList.remove("active");
-  }
+}
 })
   </script>
 </body>
