--- a/khushi/task2/flower.html
+++ b/khushi/task2/flower.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-  
+    kefdwig dc <orw class="x">wwefc 8mcnewe]    c8qe0  dfeciwf,qw</orw>
+    wd9mxjyrwa q0qw uwpi2 eruskqe mredw93dswv ueewouwoewweqweu urhrhrodkhdv 21-0klin 3dduh skd mufslc 
+    rj ch jebhosv smdeujrxvha mwujrrfvzle'
+    ekrojfjrnj sqkrjladlkq
+    dfnnjirqpolm mdrjraw  krnlqiij drbfrgf6 gr6f5neuce jdnce sd jdqdqdb h5rgg 
 </body>
-</html> 
+</html>
