--- a/.vscode/HTML/Weather_App.html
+++ b/.vscode/HTML/Weather_App.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body onload="ApiCall()">
-    
+    <input  type="text" id="cityinput" placeholder="Enter city name">
+    <button >Weather</button>0
 </body>
 <script src="../JavaScript/Hosting/Weather_App.js"></script>
 </html>
