--- a/.vscode/HTML/Weather_App.html
+++ b/.vscode/HTML/Weather_App.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body onload="ApiCall()">
-    <input  type="text" id="cityinput" placeholder="Enter city name">
-    <button >Weather</button>0
+<body>
+    
 </body>
-<script src="../JavaScript/Hosting/Weather_App.js"></script>
 </html>
