--- a/.vscode/HTML/Weather_App.html
+++ b/.vscode/HTML/Weather_App.html
@@ -195,8 +195,8 @@ body{
             </div>
         </div>
     </div>
-
-
+    </div>
+    
     <script src="../JavaScript/Hosting/Weather_App.js"></script>
     <script src="https://kit.fontawesome.com/595a890311.js" crossorigin="anonymous"></script>
 </body>
