--- a/.vscode/HTML/Weather_App.html
+++ b/.vscode/HTML/Weather_App.html
@@ -15,189 +15,53 @@
     font-family: sans-serif;
 }
 
-body{
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000;
+.parents_div{
+    margin: 100px 200px;
 }
-
-.container{
-    width: 400px;
-    height: min-content;
-    background-color: #fff;
-    border-radius: 12px;
-    padding: 28px;
-}
-
-.search-box{
-    width: 100%;
-    height: min-content;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.search-box input{
-    width: 84%;
-    font-size: 20px;
-    text-transform: capitalize;
-    color: #000;
-    background-color: #e6f5fb;
-    padding: 12px 16px;
-    border-radius: 14px;
-}
-
-.search-box input::placeholder{
-    color: #000;
-}
-
-.search-box button{
-    width: 46px;
-    height: 46px;
-    background-color: #e6f5fb;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-.search-box button:hover{
-    color: #fff;
-    background-color: #ababab;
-}
-
-.weather-body{
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-block: 20px;
-    display: none;
-}
-.weather-body img{
-    width: 60%;
-}
-
-.weather-box{
-    margin-block: 20px;
+input{
+    width: 55%;
+    border-radius: 20px;
+    border: 1px solid black;
+    height: 38px;
     text-align: center;
-}
-
-.weather-box .temperature{
-    font-size: 40px;
-    font-weight: 800;
-    position: relative;
-}
-
-.weather-box .temperature sup{
-    font-size: 20px;
-    position: absolute;
-    font-weight: 600;
-}
-
-.weather-box .description{
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: capitalize;
-}
-
-.weather-details{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
-}
-
-.humidity, .wind{
-    display: flex;
-    align-items: center;
-}
-
-.humidity{
-    margin-left: 20px;
-}
-
-.wind{
-    margin-right: 20px;
-}
-
-.weather-details i{
-    font-size: 36px;
-}
-
-.weather-details .text{
-    margin-left: 10px;
-    font-size: 16px;
-}
-
-.text span{
-    font-size: 20px;
-    font-weight: 700;
-}
-
-.location-not-found{
-    margin-top: 20px;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.location-not-found h1{
-    font-size: 20px;
-    color: #6b6b6b;
-    margin-block-end: 15px;
-}
-.location-not-found img{
-    width: 80%;
-}
-   </style>
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <div class="search-box">
-                <input type="text" placeholder="Enter your location" class="input-box">
-
-                <button class="fa-solid fa-magnifying-glass" id="searchBtn">🔍</button>
-            </div>
-        </div>
-
-        <div class="location-not-found">
-            <h1>Sorry, Location not found!!!</h1>
-            <img src="../../images/404" alt="404 Error">
-        </div>
-
-        <div class="weather-body">
-            <img src="../../images/cloud.png" alt="Weather Image" class="weather-img">
-
-            <div class="weather-box">
-                <p class="temperature">0 <sup>°C</sup></p>
-                <p class="description">light rain</p>
-            </div>
-
-            <div class="weather-details">
-                <div class="humidity">
-                    <i class="fa-sharp fa-solid fa-droplet"></i>
-                    <div class="text">
-                        <span id="humidity">45%</span>
-                        <p>Humidity</p>
-                    </div>
-                </div>
-
-                <div class="wind">
-                    <i class="fa-solid fa-wind"></i>
-                    <div class="text">
-                        <span id="wind-speed">12Km/H</span>
-                        <p>Wind Speed</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+    font-size: 18px;
     
+}
+/*input:hover{
+    background-color:rgb(205, 115, 115);
+}*/
+button{
+     border-radius: 15px;
+    border: 1px solid black;
+    width: 20%;
+    height: 38px;
+    font-size: 16px;
+    font-weight: bold;
+}
+button:hover{
+    background-color: darkred;
+    transition: all 0.5s ease-in-out;
+    color: wheat;
+}
+</style>
+</head>
+<body onload="getLocation()">
+
+    <div class="parents_div">
+    <input type="text" id="city" placeholder="Enter your Locaton"/>
+    <button onclick="apiCall()">search</button>
+     </div>
+
+    <div id="container"></div>
+
+        <div style="overflow:hidden;resize:none;max-width:100%;width:500px;height:500px;">
+        <div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;">
+        <iframe style="height:100%;width:100%;border:0;" frameborder="0" id="iframe">
+        </iframe>
+        </div>
+        <a class="embed-ded-maphtml" href="https://www.bootstrapskins.com/themes" id="grab-map-authorization">premium bootstrap themes</a>
+        <style>#google-maps-canvas img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style>
+        </div>
     <script src="../JavaScript/Hosting/Weather_App.js"></script>
-    <script src="https://kit.fontawesome.com/595a890311.js" crossorigin="anonymous"></script>
 </body>
 </html>
