--- a/.vscode/HTML/sign_page.html
+++ b/.vscode/HTML/sign_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../Css/sign_page.css" />
-    <!--link
+    <!----
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -52,7 +52,7 @@
 
       <div class="sign-in">
         <form>
-          <h1>Sign In</h1>
+          <h1 class="sign_in">Sign In</h1>
 
           <span>or use email password</span>
 
