--- a/.vscode/HTML/apifetch2.html
+++ b/.vscode/HTML/apifetch2.html
@@ -26,17 +26,22 @@
             grid-template-columns: repeat(3, 1fr);
             justify-items: center;
             gap: 30px;
+            text-align: center;
 
         }
           .card_div {
-            width: 430px;
+            width: 450px;
+            height: 500px;
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             border-radius: 30px;
+            padding: 10px 15px;
         }
 
         img {
             width: inherit;
-            height: 300px;
+            height: 250px;
+            padding: 10px 0px;
+            width: 250px;
             object-fit: cover;
             border-radius: inherit;
             border-bottom-left-radius: 0;
@@ -45,10 +50,16 @@
 
        .card_div>p,
         .detail_div_1>h3 {
-            padding: 10px 0;
+            padding: 20px 0;
 
         }
-
+        h4{
+            padding: 10px 0px;
+            font-size: 20px;
+        }
+       h3{
+        padding: 5px 0px;
+       }
         .detail_div>p {
             padding: 2px 0 !important;
         }
@@ -56,7 +67,18 @@
         .detail_div_1 {
             padding: 20px 20px;
         }
-
+       .reating_1{
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        font-size: 20px;
+       }
+       .text_div{
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 15px;
+       }
     </style>
 
    </head>
