--- a/wibside/Anatimation2.html
+++ b/wibside/Anatimation2.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 <p class="a"></p>
+<div class="p"></div>
+<div class="p"></div>
+<div class="p"></div>
+<div class="p"></div>
+<div class="p"></div>
 </body>
 </html>
