--- a/.vscode/HTML/apifetch2.html
+++ b/.vscode/HTML/apifetch2.html
@@ -118,7 +118,7 @@
         <img src="../../images/shopping-cart-logo-or-icon-design-vector.jpg" class="shop_card">
     </div>
     <div id="info"></div>
-
+    <div class=""></div>
    </body>
    <script src="../JavaScript/Hosting/Apifatch.js"> </script>
    </html>
