--- a/.vscode/HTML/sign_page.html
+++ b/.vscode/HTML/sign_page.html
@@ -49,12 +49,16 @@
           <input type="date" id="name"  autocomplete="off"  placeholder="D O B"  class="form_input" required/>
           <!-- <label for="name">D O B</label> -->
           </div>
-            
-  
+<!--             
+              <div class="content_input">
+             <label class="parent">Gender</label>
+             <div class="content_input">
+             <input type="radio"  name="Gender" value="male">
+             <label class="parent-1">Male</label>
+             </div>
+             <input type="radio"  name="famel" value="male">
+          </div> -->
 
-          <!--input type="text" placeholder="Email" />
-          <input type="password" placeholder="Password" />
-           <input type="password" placeholder="Confirm Password" /-->
           <button>Sign Up</button>
         </form>
       </div>
