--- a/.vscode/HTML/Login.html
+++ b/.vscode/HTML/Login.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="shortcut icon" href="./utils/logo.png" />
+
     <link rel="stylesheet" href="../Css/Jsoncurd.css">
 </head>
 
-<body>
+<body id="login">
+    <button onclick="backFun()">back to home</button>
     <form class="form" onsubmit="formSubmitData(event)">
         <section class="email">
             <label for="username">email</label>
