--- a/.vscode/HTML/Card_1.html
+++ b/.vscode/HTML/Card_1.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body onload="ApiCall()">
-    <div class="Info"></div>
+
 </body>
-<script src="../JavaScript/Hosting/Card.js"></script>
+<script src="../JavaScript/Jsoncurd.js"></script>
 </html>
