--- a/.vscode/HTML/LINK.html
+++ b/.vscode/HTML/LINK.html
@@ -15,7 +15,7 @@
         text-decoration: none;
         padding: 10px;
         color: black;
-        border: 1px solid orange;
+        border: 1px solid blue;
     }
     .active{
         background-color: red;
@@ -29,6 +29,7 @@
         <a href="#" class="nav-link">jQUERy</a>
         <a href="#" class="nav-link">rect</a>
         <a href="#" class="nav-link">node js</a>
+
     </nav>
 </body>
 <script>
