--- a/.vscode/HTML/scrollarrow.html
+++ b/.vscode/HTML/scrollarrow.html
@@ -111,6 +111,20 @@ section {
       opacity: 1;
       transform: translateY(0);
     }
+
+    ::-webkit-scrollbar{
+      width: 11px;
+      height: 80px;
+    }
+    ::-webkit-scrollbar-track{
+      background-color: #d1e5ff;
+    }
+    ::-webkit-scrollbar-thumb{
+      background-color: red;
+      height: 100px;
+      border-radius: 10px;
+
+    }
   
   </style>
 </head>
