--- a/khushi/animation3.html
+++ b/khushi/animation3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/animation3.css">
+    <link rel="stylesheet" href=".././css/Animation2.css">
 </head>
 <body>
     <h1 class="logo">ANIMATION</h1>
