--- a/task_perform/Linear-gradient.html
+++ b/task_perform/Linear-gradient.html
@@ -10,5 +10,7 @@
     <div class="gradients_logo">
     <img src="https://www.svgrepo.com/show/446869/ford.svg">
     </div>
+    <div class="p"></div>
+    <div>0</div>
 </body>
 </html>
